# eogslib

./: .gitignore  README.md  eogs.py  eogslib.c  eogslib.py  eogslib.pyx  parkinsons.csv  pyproject.toml  requirements.txt  setup.py
original/eGNN Classification - Rotating Gaussians/: AA Read me.txt  DataStream.mat  DecisionBound.m  O1DataDistribution.m  O2eGNN.m  PerfTest.m  VisualGranules.m  eGNNParameters.mat  eGNNParameters1.mat
original/eOGS Classification - Eye State dataset/: Dados_EyeState.xls  eOGSClass.m
original/eOGS Prediction - Parkinson Telemonitoring dataset/: EOGS.m  Novo Documento de Texto.txt  Parkinsons.xls
samples/parkinsons/: parkinsons.csv  parkinsons.py
src/: eogslib.py
src/eOGSlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
