[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "eOGSlib"
version = "0.0.1"
authors = [
  { name="Juan Pablo Espinoza", email="juanespinoza830@pm.me" },
]
description = "An eOGS Pyhton library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JPEspinoza/eogslib"
"Bug Tracker" = "https://github.com/JPEspinoza/eogslib/issues"